--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,14 @@
 <div class="row">
-  <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+  <div class="col-12">
+    <a class="btn btn-success" routerLink="new">New Recipe</a>
   </div>
 </div>
+
 <hr>
+
 <div class="row">
-  <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipeEl of recipes;let i = index" [recipe]="recipeEl"
-      [recipeId]="i+1"></app-recipe-item>
+  <div class="col-12">
+    <app-recipe-item *ngFor="let recipeEl of recipes; index as i" [recipe]="recipeEl"
+      [recipeId]="i + 1"></app-recipe-item>
   </div>
 </div>
