--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a  class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <!-- <a  class="dropdown-toggle" role="button">Manage <span class="caret"></span></a> -->
           <ul class="dropdown-menu">
             <li style="cursor: pointer;"><a>Save Data</a></li>
             <li style="cursor: pointer;"><a>Fetch Data</a></li>
