--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -22,7 +22,7 @@
         <div class="col-xs-12">
           <button class="btn btn-success" style="margin-right: 5px;" type="submit" [disabled]="form.invalid">{{editMode
             == true ? 'Update' : 'Add'}}</button>
-          <button class="btn btn-danger" style="margin-right: 5px;" type="button" (click)="delete()" [disabled]="!editMode">Delete</button>
+          <button *ngIf="editMode" class="btn btn-danger" style="margin-right: 5px;" type="button" (click)="delete()">Delete</button>
           <button class="btn btn-primary" style="margin-right: 5px;" type="button" (click)="clear()">Clear</button>
         </div>
       </div>
