--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,9 +1,10 @@
 <div class="row">
     <div class="col-12">
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+
             <div class="row">
                 <div class="col-12">
-                    <button type="submit" class="btn btn-success" style="margin-right: 10px;">Submit</button>
+                    <button type="submit" class="btn btn-success" style="margin-right: 10px;">Save</button>
                     <button type="button" class="btn btn-danger">Cancel</button>
                 </div>
             </div>
@@ -12,6 +13,10 @@
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" class="form-control" formControlName="name" />
+                        <div
+                            *ngIf="recipeForm.get('name').hasError('required') && (recipeForm.get('name').touched || recipeForm.get('name').dirty)">
+                            <small class="text-danger">Name is required</small>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -20,6 +25,10 @@
                     <div class="form-group">
                         <label for="imagePath">Image URL</label>
                         <input type="text" id="imagePath" class="form-control" formControlName="imagePath" />
+                        <div
+                            *ngIf="recipeForm.get('imagePath').hasError('required') && (recipeForm.get('imagePath').touched || recipeForm.get('imagePath').dirty)">
+                            <small class="text-danger">Image URL is required</small>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -30,26 +39,44 @@
                         <label for="description">Description</label>
                         <textarea id="description" rows="6" class="form-control"
                             formControlName="description"></textarea>
+                        <div
+                            *ngIf="recipeForm.get('description').hasError('required') && (recipeForm.get('description').touched || recipeForm.get('description').dirty)">
+                            <small class="text-danger">Description is required</small>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12" formArrayName="ingredients">
-                    <div class="row"
-                    *ngFor="let ingredientCtrl of controls; let i = index"
-                     [formGroupName]="i">
+                    <div class="row" style="margin-top: 10px;" *ngFor="let ingredientCtrl of controls; let i = index"
+                        [formGroupName]="i">
                         <div class="col-md-8">
                             <input type="text" class="form-control" formControlName="name" />
+                            <div
+                                *ngIf="getIngredientControl(i, 'name').hasError('required') && (getIngredientControl(i, 'name').touched || getIngredientControl(i, 'name').dirty)">
+                                <small class="text-danger">Name is required</small>
+                            </div>
                         </div>
+
                         <div class="col-md-2">
                             <input type="number" class="form-control" formControlName="amount" />
+                            <div
+                                *ngIf="getIngredientControl(i, 'amount').hasError('required') && (getIngredientControl(i, 'amount').touched || getIngredientControl(i, 'amount').dirty)">
+                                <small class="text-danger">Amount is required</small>
+                            </div>
                         </div>
                         <div class="col-md-2">
                             <button class="btn btn-danger">X</button>
                         </div>
                     </div>
                 </div>
+                <hr>
+                <div class="row">
+                    <div class="col-12"><button type="button" class="btn btn-success" (click)="onAddIngredients()">Add
+                            Ingredients</button></div>
+                </div>
             </div>
+
         </form>
     </div>
 </div>
