--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-12">
                     <button type="submit" class="btn btn-success" style="margin-right: 10px;">Save</button>
-                    <button type="button" class="btn btn-danger">Cancel</button>
+                    <button type="button" class="btn btn-danger" (click)="delete()">Cancel</button>
                 </div>
             </div>
             <div class="row">
